# xeduorg-ui-template

./: .gitignore  CLAUDE.md  LOG.md  MVC.md  Makefile  README.md  TECHNOLOGY_DESCRIPTION.md  TODO.md  linux_devserver.sh  linux_webserver.sh  mac_devserver.sh  mac_install_python_modules.sh  mac_update_openapi.sh  mac_update_translations_i18n.sh  mac_upload_app.sh  mac_webserver.sh  pyproject.toml  win_devserver.bat  win_install_python_modules.bat  win_update_openapi.bat  win_update_translations_i18n.bat  win_upload_app.bat  win_webserver.bat
.claude/skills/preact/: SKILL.md
.claude/skills/preact/assets/: boilerplate.html  component-patterns.md
.claude/skills/tailwindcss/: README.md  kit.json
.claude/skills/webawesome/: SKILL.md
.claude/skills/webawesome-design/: SKILL.md
app/: app.css  app.html  controller.js  icons.js  model.js  openapi.js  openapi.json  view.js  wrapper.html  wrapper.js
app/base_data/projects/: model.js  view.js
app/locales/: de.json  en.json  fr.json  it.json
app/locales/cmp/: de_cmp.json
core/: config.py  requirements.txt
core/devserver/: devserver.py
core/i18n/: deepl_service.py  sync_translations.py
core/openapi/: FIXME.md  build_openapi_models_js.py  build_openapi_models_python.py  openapi.js  openapi.json  openapi.py
core/openapi/_old/: linux_build_openapi_models_js.py
core/toolbox/: machine_os_type.py  md_to_html.py  render_jinja.py  run_pyclean.bat
core/upload/: upload.py  upload_files.py
core/webserver/: webserver.py
docs/: CLAUDE.html  MVC.html  README.html  TECHNOLOGY_DESCRIPTION.html
(+84 files in other folders)
